--- a/XBC/XBC.MVC/Views/Shared/_HeaderPartial.cshtml
+++ b/XBC/XBC.MVC/Views/Shared/_HeaderPartial.cshtml
@@ -9,7 +9,7 @@
         </a>
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-                @*@Html.Partial("_LoginPartial")*@
+                @Html.Partial("_LoginPartial")
             </ul>
         </div>
     </nav>
