--- a/XBC/XBC.MVC/Views/Shared/_SidebarPartial.cshtml
+++ b/XBC/XBC.MVC/Views/Shared/_SidebarPartial.cshtml
@@ -6,7 +6,7 @@
                 <img src="~/AdminLTE/dist/img/user.svg" class="img-circle" alt="User Image">
             </div>
             <div class="pull-left info">
-                <p>User Login</p>
+                <p>@SessionPersister.UserName</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
         </div>
